split and shuffle data

--- a/LSTM/model.ipynb
+++ b/LSTM/model.ipynb
@@ -10,17 +10,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6-final"
+   "version": "3.8.3-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.6 64-bit ('venv')",
-   "metadata": {
-    "interpreter": {
-     "hash": "f2f75a0ebfdd6e2b92c174594ae097d40e0e557cdf4b7d9b70ffaf179ea13763"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -33,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,17 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Num samples posts:  965\nNum samples comments output 965\nNum samples comments input 965\nwhen we started dating 5 years ago , i told her how much i wanted children . she said she could want kids with me . apparently , she is changed her mind and does not want kids at all now , and i just do not think i could be fulfilled without children . i do not want to lose her and our dog . i just feel so bad right now .\nim really sorry to hear that . may i ask why she doesnt want children ? or perhaps ask her why if you havent already . is she open to adopting maybe ? <END>\n<START> im really sorry to hear that . may i ask why she doesnt want children ? or perhaps ask her why if you havent already . is she open to adopting maybe ?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "import string\n",
@@ -109,8 +97,7 @@
     "posts = []\n",
     "comments_output = []\n",
     "comments_input = []\n",
-    "\n",
-    "with open('../encouragement_comments.csv', 'r', newline='') as csv_file:\n",
+    "with open('../splitted_data.csv', 'r', newline='') as csv_file:\n",
     "    textReader = csv.reader(csv_file)\n",
     "    for row in textReader:\n",
     "        cleaned_text = clean_text(row[1])\n",
@@ -147,30 +134,14 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 16,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Total number of unique words:  8453\nwins\nrescue\nbases\naware\nrespecting\n"
-     ]
-    }
-   ]
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Total unique words:  8453\nMax post length:  3501\nAverage post length:  202.76269430051815\nmedian_post_length:  134.0\nMax comment length:  923\nAverage comment length:  95.30259067357512\n95.30259067357512\nmedian_comment_length:  66.0\n203\n95\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.preprocessing.text import Tokenizer\n",
     "from scipy import stats\n",
@@ -212,17 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[[57, 2077, 6, 200, 17, 7, 3917, 36, 3196, 881, 36, 1252, 27, 125, 3144, 109, 51, 1, 6, 33, 20, 9, 30, 99, 7, 341, 12, 35, 1209, 7, 299, 738, 169, 242, 6, 4225, 4, 20, 394, 155, 1, 6, 2975, 3, 6, 576, 3, 17, 7, 739, 11, 1429, 3, 5821, 418, 3, 2730, 3, 5822, 3, 962, 3, 5, 273, 20, 7, 2819, 125, 64, 4, 4028, 1, 42, 16, 2055, 787, 112, 238, 2, 92, 55, 74, 15, 16, 72, 881, 32, 10, 9, 335, 4, 196, 637, 27, 7], [57, 55, 2, 32, 15, 226, 3, 2, 383, 4, 535, 15, 1028, 953, 1281, 639, 27, 5834, 1, 617, 1263, 5835, 3, 128, 9, 7, 118, 34, 6, 24, 15, 76, 11, 7, 96, 1], [57], [57, 22, 224, 3, 16, 219, 6, 552, 12, 650, 7, 115, 1415, 1, 5836, 5837, 2534, 5838, 518, 5839, 1, 617, 5840, 5841, 2195, 22, 224, 1, 6, 24, 14, 250, 1, 52, 24, 40, 650, 8, 188, 1415, 91, 154, 91, 3, 5, 9, 174, 37, 604, 27, 45, 1, 6, 1131, 4, 606, 10, 40, 165, 487, 435, 24, 26, 435, 1, 67, 20, 14, 391, 155, 3, 5, 67, 24, 14, 1671, 623, 1, 6, 33, 37, 41, 11, 582, 833, 165, 435, 1, 6, 33, 17, 1707, 5, 1183, 833], [57, 149, 31, 22, 347, 15, 8, 211, 1, 34, 9, 12, 14, 347, 3, 9, 12, 14, 8, 211, 1]]\n[[2077, 6, 200, 17, 7, 3917, 36, 3196, 881, 36, 1252, 27, 125, 3144, 109, 51, 1, 6, 33, 20, 9, 30, 99, 7, 341, 12, 35, 1209, 7, 299, 738, 169, 242, 6, 4225, 4, 20, 394, 155, 1, 6, 2975, 3, 6, 576, 3, 17, 7, 739, 11, 1429, 3, 5821, 418, 3, 2730, 3, 5822, 3, 962, 3, 5, 273, 20, 7, 2819, 125, 64, 4, 4028, 1, 42, 16, 2055, 787, 112, 238, 2, 92, 55, 74, 15, 16, 72, 881, 32, 10, 9, 335, 4, 196, 637, 27, 7, 56], [55, 2, 32, 15, 226, 3, 2, 383, 4, 535, 15, 1028, 953, 1281, 639, 27, 5834, 1, 617, 1263, 5835, 3, 128, 9, 7, 118, 34, 6, 24, 15, 76, 11, 7, 96, 1, 56], [56], [22, 224, 3, 16, 219, 6, 552, 12, 650, 7, 115, 1415, 1, 5836, 5837, 2534, 5838, 518, 5839, 1, 617, 5840, 5841, 2195, 22, 224, 1, 6, 24, 14, 250, 1, 52, 24, 40, 650, 8, 188, 1415, 91, 154, 91, 3, 5, 9, 174, 37, 604, 27, 45, 1, 6, 1131, 4, 606, 10, 40, 165, 487, 435, 24, 26, 435, 1, 67, 20, 14, 391, 155, 3, 5, 67, 24, 14, 1671, 623, 1, 6, 33, 37, 41, 11, 582, 833, 165, 435, 1, 6, 33, 17, 1707, 5, 1183, 833, 56], [149, 31, 22, 347, 15, 8, 211, 1, 34, 9, 12, 14, 347, 3, 9, 12, 14, 8, 211, 1, 56]]\n61.087046632124355\n61.087046632124355\n95\n95\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Truncate the output to the average length of a comment (203)\n",
     "truncated = []\n",
@@ -252,17 +215,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "padded_post_sequences.shape (965, 203)\npadded_post_sequences[500] [   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n    0    0    0   55   52  260  874  377  133  259    3    2  229   77\n   73  101    2  206  918    1   71  220   71   97   62  477   27   19\n    1 4181    3   71   12  736   77  300    5  174   14   62  477   39\n   40   51    3    5    2   26   20   14   83    2   97   22 2074  306\n  918    1    2   20   14   62    4  464   77    5  187  769    1    2\n   26   46   28  151   81   51    1]\n52\n(965, 95)\n[  57   44   50  193    4  283   10    1  200    2  216  244   71  310\n   62  918   59   36  873  216   77  244   34    6  836  264    1   12\n   71  482    4 6772  153   59    0    0    0    0    0    0    0    0\n    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n    0    0    0    0    0    0    0    0    0    0    0    0    0    0\n    0    0    0    0    0    0    0    0    0    0    0]\n57\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#PADDING\n",
     "\n",
@@ -299,7 +254,7 @@
     "# word_index = dict(zip(voc, range(len(voc))))\n",
     "\n",
     "embeddings_dictionary = {}\n",
-    "with open('./glove6B/glove.6B.100d.txt', 'r') as glove:\n",
+    "with open('./glove6B/glove.6B.200d.txt', 'r') as glove:\n",
     "    for line in glove:\n",
     "        records = line.split()\n",
     "        word = records[0]\n",
@@ -315,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_dim = 100\n",
+    "embedding_dim = 200\n",
     "hits = 0\n",
     "misses = 0\n",
     "\n",
@@ -397,7 +352,7 @@
    "source": [
     "# Defining the encoder\n",
     "\n",
-    "latent_dim = 512 #LSTM_NODES = latent_dim. Either set to 256 or 50???\n",
+    "latent_dim = 256 #LSTM_NODES = latent_dim. Either set to 256 or 50???\n",
     "\n",
     "encoder_inputs = Input(shape=(AVG_POST_LEN,)) # shape=(None,), dtype=\"int64\"\n",
     "enc_emb = embedding_layer(encoder_inputs)\n",
@@ -445,10 +400,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# from keras.optimizers import SGD\n",
     "\n",
     "model = Model([encoder_inputs, decoder_inputs], decoder_outputs)\n",
     "model.compile(\n",
-    "    optimizer='adam',\n",
+    "    optimizer=\"adam\",\n",
     "    loss='categorical_crossentropy',\n",
     "    metrics=['accuracy']\n",
     ")"
@@ -479,7 +435,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -504,31 +462,23 @@
     "# Run overnight\n",
     "# Increase word embeddings to 200\n",
     "parameters = [\n",
-    "    {'epochs': 200, 'latent_dim': 512, 'optimizer': 'adam', ''}, \n",
-    "    {'epochs': 200, 'latent_dim': 512, 'optimizer': 'adam', ''}\n",
+    "    {'epochs': 200, 'latent_dim': 256, 'optimizer': 'adam', ''}, \n",
+    "    {'epochs': 200, 'latent_dim': 256, 'optimizer': 'adam', ''}\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Model: \"functional_1\"\n__________________________________________________________________________________________________\nLayer (type)                    Output Shape         Param #     Connected to                     \n==================================================================================================\ninput_1 (InputLayer)            [(None, 203)]        0                                            \n__________________________________________________________________________________________________\ninput_2 (InputLayer)            [(None, 95)]         0                                            \n__________________________________________________________________________________________________\nembedding (Embedding)           (None, 203, 100)     845400      input_1[0][0]                    \n__________________________________________________________________________________________________\nembedding_1 (Embedding)         (None, 95, 512)      4328448     input_2[0][0]                    \n__________________________________________________________________________________________________\nlstm (LSTM)                     [(None, 512), (None, 1255424     embedding[0][0]                  \n__________________________________________________________________________________________________\nlstm_1 (LSTM)                   [(None, 95, 512), (N 2099200     embedding_1[0][0]                \n                                                                 lstm[0][1]                       \n                                                                 lstm[0][2]                       \n__________________________________________________________________________________________________\ndense (Dense)                   (None, 95, 8454)     4336902     lstm_1[0][0]                     \n==================================================================================================\nTotal params: 12,865,374\nTrainable params: 12,865,374\nNon-trainable params: 0\n__________________________________________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = keras.models.load_model(\"latent_dim_512_s2s\")\n",
     "model.summary()\n",
     "# for idx, layer in enumerate(model.layers):\n",
     "#     print(idx, layer.name)\n",
     "# return\n",
-    "latent_dim = 512\n",
+    "latent_dim = 256\n",
     "\"\"\"\n",
     "encoder_inputs = Input(shape=(AVG_POST_LEN,)) # shape=(None,), dtype=\"int64\"\n",
     "enc_emb = embedding_layer(encoder_inputs)\n",
@@ -621,39 +571,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "WARNING:tensorflow:Model was constructed with shape (None, 95) for input Tensor(\"input_2_10:0\", shape=(None, 95), dtype=float32), but it was called on an input with incompatible shape (None, 1).\n",
-      "-\n",
-      "Post:  just wanted to say that you are the best !\n",
-      "Generated Comment:   there are people who care you can overcome <END>\n",
-      "Actual Comment:  <START> how bout me ?\n",
-      "-\n",
-      "Post:  encourage me to not fuck up\n",
-      "Generated Comment:   there are people who care you can overcome <END>\n",
-      "Actual Comment:  <START> as an scper , i am personally rooting for you . even though some people give not so nice feedback on your writing , i highly admire your persistence in trying to write an scp . keep writing and i guarantee you will see improvement . seriously , i hope this helps .\n",
-      "-\n",
-      "Post:  been feeling like crap for about a year now , thought about creating a blog to vent it out since i cant seem to speak the words out loud . i have started and am now slipping back again . i cant share it with the people i know , yet at least . just struggling with going through the motions yet again .\n",
-      "Generated Comment:   there are people who care about you . it does not matter what you are feeling discouraged and foolish\n",
-      "Actual Comment:  <START> venting certainly helps relieve stress whether it is on a blog , in some artwork , written letters . . . however you can express yourself . the negative experiences tend to stick in our minds , and it is good to let them pass through . i would also encourage you to focus on positive things too . we tend to become the things we focus on . it helps to remember that there are blessings all around us , even in bad times . even one enjoyable moment , savored and recalled , can lead us to seek more .\n",
-      "-\n",
-      "Post:  thursday i got let go from my job . in the last three years since moving to portland i have lost every job ive had . the career ive been working in i am burnt out in . i know that if i get a job in this same career , its just going to happen again . i have a wife and two kids and i just kinda need some random strangers to tell me things will be okay long enough for me to actually believe it .\n",
-      "Generated Comment:   there are people who care about you . i am a bot . but you have to find another job . ive found\n",
-      "Actual Comment:  <START> it is gonna be ok man . i am sorry you are dealing with this burden . you will find your way . breathe\n",
-      "-\n",
-      "Post:  she is a friend of mine , we hung out the other day at a carnival and when we rode a ferris wheel the guy letting us on called us lovebirds so we treated the day as a mock date . she sent me a message saying that was the most fun date i have been on and we are not even dating . i want to send her a message back saying since we had such a good time on our fake date , would you wanna go on a real one and while i think i have a good shot , i am still a bit worried about it . m17 and f18\n",
-      "Generated Comment:   there are people who care you are doing well . i am a bot . downvote to your psyche if you have\n",
-      "Actual Comment:  <START> shes into you and not even subtle . so happy for you ! ask her out and dont look back !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for _ in range(5):\n",
     "# for seq_index in range(2):\n",
