--- a/LSTM/LSTM_Model.ipynb
+++ b/LSTM/LSTM_Model.ipynb
@@ -378,7 +378,7 @@
     "    epochs=1,\n",
     "    validation_split=0.1,\n",
     ")\n",
-    "model_name = \"LSTM_One_Hot\" if decoder_method == \"one=hot\" else \"LSTM_Embed\"\n",
+    "model_name = \"LSTM_One_Hot\" if decoder_method == \"one-hot\" else \"LSTM_Embed\"\n",
     "model.save(model_name)"
    ]
   },
