--- a/LSTM/LSTM_Model.ipynb
+++ b/LSTM/LSTM_Model.ipynb
@@ -35,7 +35,9 @@
     "We have consulted and adapted code from the following sources in the making of this model: \n",
     "- https://stackabuse.com/python-for-nlp-neural-machine-translation-with-seq2seq-in-keras/\n",
     "- https://keras.io/examples/nlp/lstm_seq2seq/#run-inference-sampling\n",
-    "- https://towardsdatascience.com/word-level-english-to-marathi-neural-machine-translation-using-seq2seq-encoder-decoder-lstm-model-1a913f2dc4a7"
+    "- https://towardsdatascience.com/word-level-english-to-marathi-neural-machine-translation-using-seq2seq-encoder-decoder-lstm-model-1a913f2dc4a7\n",
+    "\n",
+    "We converted the one-hot model from the sources above to include a word embedding output. "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -216,6 +218,10 @@
     "            embeddings_tokenized[i] = embedding_vector\n",
     "    embeddings_file_name = \"embeddings_tokenized_one-hot.txt\"\n",
     "else:\n",
+    "    # Include additional embedding for the <START>, <END> and pad words.\n",
+    "    # <START> = 00...00100\n",
+    "    # <END> = 00...00010\n",
+    "    # pad = 00...00001\n",
     "    embedding_dim = 200+3\n",
     "    for word, i in word_to_index.items():\n",
     "        if word == start_char:\n",
@@ -269,6 +275,7 @@
     "        ), \n",
     "        dtype='float32'\n",
     "    )\n",
+    "    # word embedding of output\n",
     "    for i, seqs in enumerate(padded_comment_output_sequences):\n",
     "        for j, seq in enumerate(seqs):\n",
     "            decoder_targets[i, j] = embeddings_tokenized[seq]"
@@ -374,8 +381,8 @@
     "r = model.fit(\n",
     "    x=[padded_post_sequences, padded_comment_input_sequences],\n",
     "    y=decoder_targets,\n",
-    "    batch_size=1,\n",
-    "    epochs=1,\n",
+    "    batch_size=64,\n",
+    "    epochs=epochs,\n",
     "    validation_split=0.1,\n",
     ")\n",
     "model_name = \"LSTM_One_Hot\" if decoder_method == \"one-hot\" else \"LSTM_Embed\"\n",
